# seqjax

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  sketch.ipynb
.github/workflows/: docs.yml  long-tests.yml  mypy.yml  tests.yml
docs/: amortized_multivariate_autoregressor_plan.md  api.md  index.html  index.md  search.js  seqjax.html
docs/tutorials/: bayesian-mcmc.md  getting-started.md  particle-filtering.md  variational-inference.md
experiments/: ablation.py  ar1_inference_comparison.py  ar1_posterior_comparison.py  core.py  double_well_inference_comparison.py  process_prepared_dataset.py  slurm_plan_template.py
experiments/buffered_sgmcmc/: ar1.py
experiments/nuts/: ar1_bayesian.py  ar1_parameter.py
experiments/score_sgld/: ar1_posterior_comparison.py
experiments/smc/: logistic_regression.py
experiments/stochastic_vol/: bootstrap_filter.py  skew_exploration.py  unbiased_marginal.py
experiments/vi/: ar1_vi_vs_nuts.py
notebooks/: stochastic-vol-viz.ipynb  vi-test.ipynb
seqjax/: __init__.py  experiment.py  io.py  util.py
seqjax/cli/: __init__.py  cli.py  codes.py  latent_fit.py  results.py  slurm_jobs.py
seqjax/inference/: __init__.py  embedder.py  interface.py  kalman.py  mcmc.py  particlefilter.py  registry.py  score_estimator.py  sgld.py  vi.py
seqjax/inference/autoregressive_vi/: __init__.py  autoregressive_vi.py
seqjax/inference/buffered/: __init__.py  buffered.py  score_estimator.py  sgmcmc.py
seqjax/inference/mcmc/: __init__.py  metropolis.py  nuts.py  nuts_latent.py
seqjax/inference/optimization/: __init__.py  registry.py
seqjax/inference/particlefilter/: __init__.py  base.py  filter_definitions.py  interface.py  metrics.py  recorders.py  registry.py  resampling.py  score_estimator.py
seqjax/inference/pmcmc/: __init__.py  pmmh.py  tuning.py
seqjax/inference/vi/: __init__.py  aggregation.py  (+19 more)
seqjax/model/: __init__.py  ar.py  ar_bayesian.py  base.py  double_well.py  double_well_bayesian.py  evaluate.py  hmm.py  interface.py  linear_gaussian.py  linear_gaussian_bayesian.py  logistic_smc.py  particlefilter.py  poisson_ssm.py  registry.py  shared.py  simulate.py  sir.py  stochastic_vol.py  typing.py  util.py  visualise.py
seqjax/tests/: test_cli.py
stubs/distrax/: __init__.pyi  distrax_test.pyi
stubs/wandb/: __init__.pyi  errors.pyi
tests/: __init__.py  test_autoregressive_vi.py  test_buffered.py  test_buffered_sgld.py  test_cli_codes.py  test_cli_imports.py  test_cli_latent_fit.py  test_cli_lazy_imports.py  test_conv_nf.py  test_conv_nf_density_audit.py  test_experiment_runtime.py  test_filters_integration.py  test_high_order_transition.py  test_io_storage.py  test_kalman.py  test_logistic_smc.py  test_mcmc.py  test_mcmc_bayesian.py  test_models.py  test_particle_filter.py  test_particlefilter.py  test_pmcmc.py  test_resampling.py  test_sgld.py  test_sir.py  test_slurm_jobs.py  test_typing.py  test_util.py  test_vi.py  test_vi_latent_gaussian_fit.py  test_visualise.py
tests/inference/: test_amortized_flow.py  test_nuts_latent.py  test_particle_filter.py  test_pmcmc_tuning.py  test_registry_inference.py  test_vi_autoregressive_multivariate.py  test_vi_embedder_conv_aggregation.py  test_vi_embedder_positional.py  test_vi_embedder_rnn.py  test_vi_embedder_transformer.py  test_vi_embedder_window_positional.py  test_vi_parameter_mvn.py  test_vi_sequence_minibatch.py  test_vi_structured.py
tests/models/: test_evaluate.py  test_linear_gaussian_dynamic.py  test_method_model_ar1.py  test_registry_models.py
(+146 files in other folders)
