[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "seqjax"
version = "0.0.1"
authors = [
  { name="Tennessee Hickling", email="tennessee.hickling@bayesianshift.co.uk" },
]
description = "A jax package for expressing sequential models."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]

dependencies = [
    "jax>=0.5.2",
    "equinox>=0.12.1",
    "jaxtyping>=0.2.38",
    "graphviz",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy>=0.950",
    "jupyter",
    "pre-commit",
    "matplotlib",
    "pytest",
]

[tool.hatch.build]
include = ["seqjax/*", "seqjax/py.typed"]

[tool.ruff]
extend-exclude = ["sketch.ipynb", "notebooks/*"]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]
[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101"]
