[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "seqjax"
version = "0.0.1"
authors = [
  { name="Tennessee Hickling", email="tennessee.hickling@bayesianshift.co.uk" },
]
description = "A jax package for expressing sequential models."
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]

dependencies = [
    "jax>=0.5.2",
    "equinox>=0.12.1",
    "jaxtyping>=0.2.38",
    "flowjax>=17.2.0",
    "graphviz",
    "blackjax",
    "distrax",
    "jax_tqdm",
    "tqdm",
    "wandb",
    "typer>=0.12",
    "quantiphy",
    "pytimeparse2"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy>=0.950",
    "jupyter",
    "pre-commit",
    "matplotlib",
    "pytest",
    "arxiv",
    "polars",
]

[tool.pytest.ini_options]
addopts = "-m 'not longrun'"
markers = [
    "longrun: marks tests as long-running statistical checks",
]

[tool.hatch.build]
include = ["seqjax/*", "seqjax/py.typed"]

[project.scripts]
seqjax = "seqjax.cli:main"

[tool.ruff]
extend-exclude = ["sketch.ipynb", "notebooks/*"]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501", "F722"]
[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101"]

[tool.mypy]
python_version = "3.13"

[mypy]
mypy_path = "stubs"


[[tool.mypy.overrides]]
module = [
"seqjax.experiments.*",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
"seqjax.inference.*",
"seqjax.io",
]
